--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author": "resnica",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
@@ -10,6 +11,5 @@
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/resnica/back_end_practice.git"
-	},
-	"author": "Resnica"
+	}
 }
